// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-dark"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
        href="/profile"
      >
        Yodlr
      </a>
      <button
        aria-controls="navbarNav"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="navbar-nav ml-auto"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/users"
            >
              Users
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/users/new-user"
            >
              Add user
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/profile"
            >
              Profile
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/login"
            >
              Log out testuser
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="navbar navbar-expand-md navbar-dark bg-dark"
  >
    <div
      class="container-fluid"
    >
      <a
        class="navbar-brand"
        href="/profile"
      >
        Yodlr
      </a>
      <button
        aria-controls="navbarNav"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="navbar-nav ml-auto"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/login"
            >
              Login
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/signup"
            >
              Sign Up
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
